--- a/src/main/resources/templates/secured/students/edit.html
+++ b/src/main/resources/templates/secured/students/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>eRegistrar Student Registration - New Student</title>
+    <title>eRegistrar Student Registration - Edit</title>
     <style>
         a.std-lnk-btn {
             text-decoration:none;color: #000000;border: 1px solid #000000;padding: 0.20em;background-color: #efefef;
@@ -15,13 +15,14 @@
 <body>
 <header th:replace="fragments/header :: header"></header>
 <main>
-    <h1>New Student Form</h1>
+    <h1>Update Student Form</h1>
     <div style="border: 1px solid;padding: 1em;">
         <div>
             Fields marked with asterisk (*) are required.
         </div>
-        <form method="post" action="/eregistrar/students/new" th:object="${student}">
+        <form method="post" action="/eregistrar/students/update" th:object="${student}">
             <fieldset>
+                <input name="studentId" type="hidden" th:value="${student.studentId}"/>
                 <div>
                     <label>First Name*</label>
                 </div>
@@ -71,7 +72,7 @@
             <div style="margin-top: 1em;">
                 <a class="std-lnk-btn" href="/eregistrar/students/list">Cancel</a>
                 <input class="std-btn" type="reset" value="Reset">
-                <input class="std-btn" type="submit" value="Add Student">
+                <input class="std-btn" type="submit" value="Edit Publisher">
             </div>
         </form>
     </div>
