Completed Search Functionality

--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -7,7 +7,7 @@
 <body>
 <header th:replace="fragments/header :: header"></header>
 <main>
-    <h1> Hello Spring WebApp 101!!!</h1>
+    <h1> This is eRegistrar Student Registration System</h1>
 </main>
 </body>
 </html>
