--- a/src/main/resources/templates/secured/students/edit.html
+++ b/src/main/resources/templates/secured/students/edit.html
@@ -72,7 +72,7 @@
             <div style="margin-top: 1em;">
                 <a class="std-lnk-btn" href="/eregistrar/students/list">Cancel</a>
                 <input class="std-btn" type="reset" value="Reset">
-                <input class="std-btn" type="submit" value="Edit Publisher">
+                <input class="std-btn" type="submit" value="Edit Student">
             </div>
         </form>
     </div>
