--- a/src/main/resources/templates/secured/students/new.html
+++ b/src/main/resources/templates/secured/students/new.html
@@ -26,7 +26,7 @@
                     <label>First Name*</label>
                 </div>
                 <div>
-                    <div><span th:if="${#fields.hasErrors('firstName')}" th:errors="*{student.firstName}" style="color:red;"></span></div>
+                    <div><span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" style="color:red;"></span></div>
                     <input name="firstName" type="text" th:value="${student.firstName}" autofocus>
                 </div>
                 <div>
@@ -43,16 +43,18 @@
                     <input name="lastName" type="text" th:value="${student.lastName}" autofocus>
                 </div>
                 <div>
-                    <label>Student Number</label>
+                    <label>Student Number*</label>
                 </div>
                 <div>
-                    <input name="city" type="text" th:field="${student.studentNumber}">
+                    <div><span th:if="${#fields.hasErrors('studentNumber')}" th:errors="*{studentNumber}" style="color:red;"></span></div>
+                    <input name="studentNumber" type="text" th:field="${student.studentNumber}">
                 </div>
                 <div>
-                    <label>Enrollment Date</label>
+                    <label>Enrollment Date*</label>
                 </div>
                 <div>
-                    <input name="state" type="date" th:field="${student.enrollmentDate}">
+                    <div><span th:if="${#fields.hasErrors('enrollmentDate')}" th:errors="*{enrollmentDate}" style="color:red;"></span></div>
+                    <input name="enrollmentDate" type="date" th:field="${student.enrollmentDate}">
                 </div>
                 <div>
                     <label>CGPA</label>
@@ -61,9 +63,10 @@
                     <input name="zipCode" type="text" th:field="${student.cgpa}">
                 </div>
                 <div>
-                    <label>Is International?</label>
+                    <label>Is International? * </label>
                 </div>
-                <select th:field="${student.isInternational}">
+                <div><span th:if="${#fields.hasErrors('isInternational')}" th:errors="*{isInternational}" style="color:red;"></span></div>
+                <select name="isInternational" th:field="${student.isInternational}">
                     <option th:value="'Yes'" th:text="Yes"></option>
                     <option th:value="'No'" th:text="No"></option>
                 </select>
