--- a/src/main/resources/templates/secured/students/edit.html
+++ b/src/main/resources/templates/secured/students/edit.html
@@ -24,50 +24,76 @@
             <fieldset>
                 <input name="studentId" type="hidden" th:value="${student.studentId}"/>
                 <div>
-                    <label>First Name*</label>
+                    <label><span style="font-weight: bold">First Name*</span></label>
                 </div>
                 <div>
-                    <div><span th:if="${#fields.hasErrors('firstName')}" th:errors="*{student.firstName}" style="color:red;"></span></div>
+                    <div><span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" style="color:red;"></span></div>
                     <input name="firstName" type="text" th:value="${student.firstName}" autofocus>
                 </div>
                 <div>
-                    <label>Middle Naame</label>
+                    <label><span style="font-weight: bold">Middle Name</span></label>
                 </div>
                 <div>
                     <input name="middleName" type="text" th:field="${student.middleName}">
                 </div>
                 <div>
-                    <label>Last Name*</label>
+                    <label><span style="font-weight: bold">Last Name*</span></label>
                 </div>
                 <div>
                     <div><span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" style="color:red;"></span></div>
                     <input name="lastName" type="text" th:value="${student.lastName}" autofocus>
                 </div>
                 <div>
-                    <label>Student Number</label>
+                    <label><span style="font-weight: bold">Student Number</span></label>
+                </div>
+                <div><span th:if="${#fields.hasErrors('studentNumber')}" th:errors="*{studentNumber}" style="color:red;"></span></div>
+                <div>
+                    <input name="studentNumber" type="text" th:field="${student.studentNumber}">
                 </div>
                 <div>
-                    <input name="city" type="text" th:field="${student.studentNumber}">
+                    <label><span style="font-weight: bold">Enrollment Date</span></label>
                 </div>
                 <div>
-                    <label>Enrollment Date</label>
+                    <div><span th:if="${#fields.hasErrors('enrollmentDate')}" th:errors="*{enrollmentDate}" style="color:red;"></span></div>
+                    <input name="enrollmentDate" type="date" th:field="${student.enrollmentDate}">
                 </div>
                 <div>
-                    <input name="state" type="date" th:field="${student.enrollmentDate}">
+                    <label><span style="font-weight: bold">CGPA</span></label>
                 </div>
                 <div>
-                    <label>CGPA</label>
+                    <input name="cgpa" type="text" th:field="${student.cgpa}">
                 </div>
                 <div>
-                    <input name="zipCode" type="text" th:field="${student.cgpa}">
+                    <label><span style="font-weight: bold">Is International?</span></label>
                 </div>
-                <div>
-                    <label>Is International?</label>
-                </div>
-                <select th:field="${student.isInternational}">
+                <div><span th:if="${#fields.hasErrors('isInternational')}" th:errors="*{isInternational}" style="color:red;"></span></div>
+                <select name="isInternational" th:field="${student.isInternational}">
                     <option th:value="'Yes'" th:text="Yes"></option>
                     <option th:value="'No'" th:text="No"></option>
                 </select>
+                <div>
+                    <label><span style="font-weight: bold">Gender*</span></label>
+                </div>
+                <div><span th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}" style="color:red;"></span></div>
+                <div>
+                    <input type="radio" th:field="*{gender}" id="male" value="Male">
+                    <label for="male">Male</label>
+                </div>
+                <div>
+                    <input type="radio" th:field="*{gender}" id="female" value="Female">
+                    <label for="female">Female</label>
+                </div>
+                <div>
+                    <input type="radio" th:field="*{gender}" id="other" value="Other">
+                    <label for="other">Other</label>
+                </div>
+                <div>
+                    <label><span style="font-weight: bold">Is FPP Student?</span></label>
+                </div>
+                <input  type="checkbox" th:field="*{fpp}" id="isFPP">
+                <label  for="isFPP">
+                    FPP
+                </label>
             </fieldset>
             <div style="margin-top: 1em;">
                 <a class="std-lnk-btn" href="/eregistrar/students/list">Cancel</a>
